edit the nav bar (burger menu)

--- a/projects.html
+++ b/projects.html
@@ -22,25 +22,25 @@
   <body>
     <main>
       <section>
-        <header>
-          <div class="container-one">
+          <header>
             <div class="logo">
-              <img src="./assets/Logo.png" alt="" width="85" />
+              <img src="./assets/Logo.png" alt="Logo" width="85" />
             </div>
-            <div class="nav-section">
-              <nav>
-                <ul>
-                  <li><a href="./index.html">Main</a></li>
-                  <li><a href="index.html#services">Services</a></li>
-                  <li><a href="index.html#skills">Skills</a></li>
-                  <li><a href="index.html#testimonials">Testimonials</a></li>
-                  <li><a href="index.html#highlight">Highlights</a></li>
-                  <li><a href="#" class="active">Projects</a></li>
-                </ul>
-              </nav>
-            </div>
-          </div>
-        </header>
+            <nav>
+              <div class="burger-menu" id="burger-menu">
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+              </div>
+              <ul id="nav-links" class="nav-links">
+                <li><a href="index.html">Main</a></li>
+                <li><a href="index.html#services">Services</a></li>
+                <li><a href="index.html#skills">Skills</a></li>
+                <li><a href="index.html#testimonials">Testimonials</a></li>
+                <li><a href="index.html#highlight">Highlights</a></li>
+                <li><a href="./projects.html">Projects</a></li>
+              </ul>
+            </nav>
       </section>
       <section>
         <div class="container">
@@ -72,5 +72,6 @@
       </footer>
       <section></section>
     </main>
+    <script src="script.js"></script>
   </body>
 </html>
